# RubyEngine

./: .bazelrc  .gitignore  .gitmodules  MODULE.bazel  README.md  WORKSPACE.bazel  imgui.ini  settings.gradle  vcpkg.json
doc/: org.md  todo.md
editor/: build.gradle
editor/src/ruby/editor/cpp/: app.cpp
engine/: build.gradle
engine/src/main/cpp/: app.cpp
engine/src/main/public/: app.h
engine/src/test/cpp/: app_test.cpp
projects/: BUILD.bazel  settings.gradle
projects/editor/src/main/cpp/: AppUi.cpp  app.cpp
projects/editor/src/main/headers/: App.h  AppUi.h  EditorPipeline.h
projects/engine/res/: base.frag  base.vert
projects/engine/src/main/cpp/: RubyEngine.cpp  Window.cpp
projects/engine/src/main/public/: BsPipeline.h  DefaultPipeline.h  RubyEngine.h  Ui.h  Window.h
projects/engine/src/main/public/components/: Components.h  WorldQuery.h
projects/engine/src/main/public/components/2d/: Components2d.h
projects/engine/src/main/public/components/3d/: Components3d.h
projects/engine/src/main/public/io/: Files.h
projects/engine/src/main/public/nodes/: Node.h
projects/engine/src/main/public/nodes/3d/: Node3d.h  NodeCamera3d.h
projects/engine/src/main/public/resources/: Material.h  Mesh.h
projects/engine/src/main/public/shaders/: Shader.cpp  Shader.h  base.frag  base.vert
projects/engine/src/main/public/util/: Math.h  MeshVao.h  OpenGlBuffers.h
projects/engine/src/main/public/util/shapes/: Cube.h  Gizmo.h
projects/examples/src/test/cpp/: proto_test.cpp
projects/prototype/src/main/cpp/: app.cpp
prototype/src/ruby/prototype/cpp/: app.cpp
prototype/src/test/cpp/: proto_test.cpp
velvet/: settings.gradle
velvet/lib/: build.gradle
velvet/lib/src/main/cpp/: hello.cpp
velvet/lib/src/main/public/: velv.h
velvet/lib/src/test/cpp/: hello_test.cpp
