# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "rules_foreign_cc",
#     # TODO: Get the latest sha256 value from a bazel debug message or the latest
#     #       release on the releases page: https://github.com/bazel-contrib/rules_foreign_cc/releases
#     #
#     # sha256 = "...",
#     strip_prefix = "rules_foreign_cc-0.13.0",
#     url = "https://github.com/bazel-contrib/rules_foreign_cc/archive/0.13.0.tar.gz",
# )

# load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# rules_foreign_cc_dependencies()

new_local_repository(
    name = "vcpkg",
    path = "./vcpkg_installed",
    build_file = "vcpkg.BUILD.bazel",
)
